Updated client types, and resolved errors related to optional OIDC config
